5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4124/executions/1675_2195.log
== TEST (2019-05-01 10:52:42) 
-- CODE:
num = int(input("Digite a data: "))
d = num // 1000000
print(d)
-- OUTPUT:
15
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-01 10:54:45) 
-- CODE:
num = int(input("Digite a data: "))
d = num // 1000000
d1 = num % 1000000
m = d1 // 10000
m1 = d1 % 10000
print(d, m)
-- OUTPUT:
15 8
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-01 10:54:50) 
-- CODE:
num = int(input("Digite a data: "))
d = num // 1000000
d1 = num % 1000000
m = d1 // 10000
m1 = d1 % 10000
print(d, m)
-- OUTPUT:
15 8
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-01 10:55:30) 
-- CODE:
num = int(input("Digite a data: "))
d = num // 1000000
d1 = num % 1000000
m = d1 // 10000
m1 = d1 % 10000
a = m1 // 100
print(d, m, a)
-- OUTPUT:
15 8 19
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-01 10:55:51) 
-- CODE:
num = int(input("Digite a data: "))
d = num // 1000000
d1 = num % 1000000
m = d1 // 10000
m1 = d1 % 10000
a = m1
print(d, m, a)
-- OUTPUT:
15 8 1990
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-01 11:20:25) 
-- CODE:
num = int(input("Digite a data: "))
d = num // 1000000
d1 = num % 1000000
m = d1 // 10000
m1 = d1 % 10000
a = m1
if(m == 1):
	m1 = "janeiro"
elif(m == 2):
	m1 = "fevereiro"
elif(m == 3):
	m1 = "marco"
elif(m == 4):
	m1 = "abril"
elif(m == 5):
	m1 = "maio"
elif(m == 6):
	m1 = "junho"
elif(m == 7):
	m1 = "julho"
elif(m == 8):
	m1 = "agosto"
elif(m == 9):
	m1 = "setembro"
elif(m == 10):
	m1 = "outubro"
elif(m == 11):
	m1 = "novembro"
elif(m == 12):
	m1 = "Dezembro"
if(a > 0 and m >= 1 and m <= 12 and d >= 1):
	if(a % 4 == 0):
		if(m == 2):
			if(d > 29):
				print(, d," de fevereiro de", a, "nao eh uma data valida")
			else:
				print(, d," de fevereiro de", a, "eh uma data valida")
	elif(a == 1582):
		if((d >= 5 and m == 10) or (d <= 14 and m == 10))
			print(, d," de outubro de ", a, " nao eh uma data valida")
		else:
			print(, d," de ", m1," de ", a, "eh uma data valida")
	else:
		print(, d," de ", m1," de ", a, "eh uma data valida")
else:
	print(, d," de ", m1," de ", a, "nao eh uma data valida")
			
			
			
-- ERROR:
File "XXXX", line 35
    print(, d," de fevereiro de", a, "nao eh uma data valida")
          ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-01 11:20:46) 
-- CODE:
num = int(input("Digite a data: "))
d = num // 1000000
d1 = num % 1000000
m = d1 // 10000
m1 = d1 % 10000
a = m1
if(m == 1):
	m1 = "janeiro"
elif(m == 2):
	m1 = "fevereiro"
elif(m == 3):
	m1 = "marco"
elif(m == 4):
	m1 = "abril"
elif(m == 5):
	m1 = "maio"
elif(m == 6):
	m1 = "junho"
elif(m == 7):
	m1 = "julho"
elif(m == 8):
	m1 = "agosto"
elif(m == 9):
	m1 = "setembro"
elif(m == 10):
	m1 = "outubro"
elif(m == 11):
	m1 = "novembro"
elif(m == 12):
	m1 = "Dezembro"
if(a > 0 and m >= 1 and m <= 12 and d >= 1):
	if(a % 4 == 0):
		if(m == 2):
			if(d > 29):
				print(, d," de fevereiro de", a, "nao eh uma data valida")
			else:
				print(, d," de fevereiro de", a, "eh uma data valida")
	elif(a == 1582):
		if((d >= 5 and m == 10) or (d <= 14 and m == 10))
			print(, d," de outubro de ", a, " nao eh uma data valida")
		else:
			print(, d," de ", m1," de ", a, "eh uma data valida")
	else:
		print(, d," de ", m1," de ", a, "eh uma data valida")
else:
	print(, d," de ", m1," de ", a, "nao eh uma data valida")
			
			
			
-- ERROR:
File "XXXX", line 35
    print(, d," de fevereiro de", a, "nao eh uma data valida")
          ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-01 11:20:58) 
-- CODE:
num = int(input("Digite a data: "))
d = num // 1000000
d1 = num % 1000000
m = d1 // 10000
m1 = d1 % 10000
a = m1
if(m == 1):
	m1 = "janeiro"
elif(m == 2):
	m1 = "fevereiro"
elif(m == 3):
	m1 = "marco"
elif(m == 4):
	m1 = "abril"
elif(m == 5):
	m1 = "maio"
elif(m == 6):
	m1 = "junho"
elif(m == 7):
	m1 = "julho"
elif(m == 8):
	m1 = "agosto"
elif(m == 9):
	m1 = "setembro"
elif(m == 10):
	m1 = "outubro"
elif(m == 11):
	m1 = "novembro"
elif(m == 12):
	m1 = "Dezembro"
if(a > 0 and m >= 1 and m <= 12 and d >= 1):
	if(a % 4 == 0):
		if(m == 2):
			if(d > 29):
				print(d," de fevereiro de", a, "nao eh uma data valida")
			else:
				print(, d," de fevereiro de", a, "eh uma data valida")
	elif(a == 1582):
		if((d >= 5 and m == 10) or (d <= 14 and m == 10))
			print(, d," de outubro de ", a, " nao eh uma data valida")
		else:
			print(, d," de ", m1," de ", a, "eh uma data valida")
	else:
		print(, d," de ", m1," de ", a, "eh uma data valida")
else:
	print(, d," de ", m1," de ", a, "nao eh uma data valida")
			
			
			
-- ERROR:
File "XXXX", line 37
    print(, d," de fevereiro de", a, "eh uma data valida")
          ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-01 11:21:05) 
-- CODE:
num = int(input("Digite a data: "))
d = num // 1000000
d1 = num % 1000000
m = d1 // 10000
m1 = d1 % 10000
a = m1
if(m == 1):
	m1 = "janeiro"
elif(m == 2):
	m1 = "fevereiro"
elif(m == 3):
	m1 = "marco"
elif(m == 4):
	m1 = "abril"
elif(m == 5):
	m1 = "maio"
elif(m == 6):
	m1 = "junho"
elif(m == 7):
	m1 = "julho"
elif(m == 8):
	m1 = "agosto"
elif(m == 9):
	m1 = "setembro"
elif(m == 10):
	m1 = "outubro"
elif(m == 11):
	m1 = "novembro"
elif(m == 12):
	m1 = "Dezembro"
if(a > 0 and m >= 1 and m <= 12 and d >= 1):
	if(a % 4 == 0):
		if(m == 2):
			if(d > 29):
				print(d," de fevereiro de", a, "nao eh uma data valida")
			else:
				print(d," de fevereiro de", a, "eh uma data valida")
	elif(a == 1582):
		if((d >= 5 and m == 10) or (d <= 14 and m == 10))
			print(, d," de outubro de ", a, " nao eh uma data valida")
		else:
			print(, d," de ", m1," de ", a, "eh uma data valida")
	else:
		print(, d," de ", m1," de ", a, "eh uma data valida")
else:
	print(, d," de ", m1," de ", a, "nao eh uma data valida")
			
			
			
-- ERROR:
File "XXXX", line 39
    if((d >= 5 and m == 10) or (d <= 14 and m == 10))
                                                    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-01 11:21:16) 
-- CODE:
num = int(input("Digite a data: "))
d = num // 1000000
d1 = num % 1000000
m = d1 // 10000
m1 = d1 % 10000
a = m1
if(m == 1):
	m1 = "janeiro"
elif(m == 2):
	m1 = "fevereiro"
elif(m == 3):
	m1 = "marco"
elif(m == 4):
	m1 = "abril"
elif(m == 5):
	m1 = "maio"
elif(m == 6):
	m1 = "junho"
elif(m == 7):
	m1 = "julho"
elif(m == 8):
	m1 = "agosto"
elif(m == 9):
	m1 = "setembro"
elif(m == 10):
	m1 = "outubro"
elif(m == 11):
	m1 = "novembro"
elif(m == 12):
	m1 = "Dezembro"
if(a > 0 and m >= 1 and m <= 12 and d >= 1):
	if(a % 4 == 0):
		if(m == 2):
			if(d > 29):
				print(d," de fevereiro de", a, "nao eh uma data valida")
			else:
				print(d," de fevereiro de", a, "eh uma data valida")
	elif(a == 1582):
		if((d >= 5 and m == 10) or (d <= 14 and m == 10)):
			print(, d," de outubro de ", a, " nao eh uma data valida")
		else:
			print(, d," de ", m1," de ", a, "eh uma data valida")
	else:
		print(, d," de ", m1," de ", a, "eh uma data valida")
else:
	print(, d," de ", m1," de ", a, "nao eh uma data valida")
			
			
			
-- ERROR:
File "XXXX", line 40
    print(, d," de outubro de ", a, " nao eh uma data valida")
          ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-01 11:21:35) 
-- CODE:
num = int(input("Digite a data: "))
d = num // 1000000
d1 = num % 1000000
m = d1 // 10000
m1 = d1 % 10000
a = m1
if(m == 1):
	m1 = "janeiro"
elif(m == 2):
	m1 = "fevereiro"
elif(m == 3):
	m1 = "marco"
elif(m == 4):
	m1 = "abril"
elif(m == 5):
	m1 = "maio"
elif(m == 6):
	m1 = "junho"
elif(m == 7):
	m1 = "julho"
elif(m == 8):
	m1 = "agosto"
elif(m == 9):
	m1 = "setembro"
elif(m == 10):
	m1 = "outubro"
elif(m == 11):
	m1 = "novembro"
elif(m == 12):
	m1 = "Dezembro"
if(a > 0 and m >= 1 and m <= 12 and d >= 1):
	if(a % 4 == 0):
		if(m == 2):
			if(d > 29):
				print(d," de fevereiro de", a, "nao eh uma data valida")
			else:
				print(d," de fevereiro de", a, "eh uma data valida")
	elif(a == 1582):
		if((d >= 5 and m == 10) or (d <= 14 and m == 10)):
			print(d," de outubro de ", a, " nao eh uma data valida")
		else:
			print(d," de ", m1," de ", a, "eh uma data valida")
	else:
		print(d," de ", m1," de ", a, "eh uma data valida")
else:
	print(d," de ", m1," de ", a, "nao eh uma data valida")
			
			
			
-- OUTPUT:
15  de  agosto  de  1990 eh uma data valida
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-01 11:21:53) 
-- CODE:
num = int(input("Digite a data: "))
d = num // 1000000
d1 = num % 1000000
m = d1 // 10000
m1 = d1 % 10000
a = m1
if(m == 1):
	m1 = "janeiro"
elif(m == 2):
	m1 = "fevereiro"
elif(m == 3):
	m1 = "marco"
elif(m == 4):
	m1 = "abril"
elif(m == 5):
	m1 = "maio"
elif(m == 6):
	m1 = "junho"
elif(m == 7):
	m1 = "julho"
elif(m == 8):
	m1 = "agosto"
elif(m == 9):
	m1 = "setembro"
elif(m == 10):
	m1 = "outubro"
elif(m == 11):
	m1 = "novembro"
elif(m == 12):
	m1 = "Dezembro"
if(a > 0 and m >= 1 and m <= 12 and d >= 1):
	if(a % 4 == 0):
		if(m == 2):
			if(d > 29):
				print(d," de fevereiro de", a, "nao eh uma data valida")
			else:
				print(d," de fevereiro de", a, "eh uma data valida")
	elif(a == 1582):
		if((d >= 5 and m == 10) or (d <= 14 and m == 10)):
			print(d," de outubro de ", a, " nao eh uma data valida")
		else:
			print(d," de ", m1," de ", a, "eh uma data valida")
	else:
		print(d," de ", m1," de ", a, "eh uma data valida")
else:
	print(d," de ", m1," de ", a, "nao eh uma data valida")
			
			
			
-- OUTPUT:
15  de  agosto  de  1990 eh uma data valida
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-01 11:22:53) 
-- CODE:
num = int(input("Digite a data: "))
d = num // 1000000
d1 = num % 1000000
m = d1 // 10000
m1 = d1 % 10000
a = m1
if(m == 1):
	m1 = "janeiro"
elif(m == 2):
	m1 = "fevereiro"
elif(m == 3):
	m1 = "marco"
elif(m == 4):
	m1 = "abril"
elif(m == 5):
	m1 = "maio"
elif(m == 6):
	m1 = "junho"
elif(m == 7):
	m1 = "julho"
elif(m == 8):
	m1 = "agosto"
elif(m == 9):
	m1 = "setembro"
elif(m == 10):
	m1 = "outubro"
elif(m == 11):
	m1 = "novembro"
elif(m == 12):
	m1 = "Dezembro"
print(m1)
if(a > 0 and m >= 1 and m <= 12 and d >= 1):
	if(a % 4 == 0):
		if(m == 2):
			if(d > 29):
				print(d," de fevereiro de", a, "nao eh uma data valida")
			else:
				print(d," de fevereiro de", a, "eh uma data valida")
	elif(a == 1582):
		if((d >= 5 and m == 10) or (d <= 14 and m == 10)):
			print(d," de outubro de ", a, " nao eh uma data valida")
		else:
			print(d," de ", m1," de ", a, "eh uma data valida")
	else:
		print(d," de ", m1," de ", a, "eh uma data valida")
else:
	print(d," de ", m1," de ", a, "nao eh uma data valida")
			
			
			
-- OUTPUT:
agosto
15  de  agosto  de  1990 eh uma data valida
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-01 11:23:08) 
-- CODE:
num = int(input("Digite a data: "))
d = num // 1000000
d1 = num % 1000000
m = d1 // 10000
m1 = d1 % 10000
a = m1
if(m == 1):
	m1 = "janeiro"
elif(m == 2):
	m1 = "fevereiro"
elif(m == 3):
	m1 = "marco"
elif(m == 4):
	m1 = "abril"
elif(m == 5):
	m1 = "maio"
elif(m == 6):
	m1 = "junho"
elif(m == 7):
	m1 = "julho"
elif(m == 8):
	m1 = "agosto"
elif(m == 9):
	m1 = "setembro"
elif(m == 10):
	m1 = "outubro"
elif(m == 11):
	m1 = "novembro"
elif(m == 12):
	m1 = "Dezembro"
print(m1)
if(a > 0 and m >= 1 and m <= 12 and d >= 1):
	if(a % 4 == 0):
		if(m == 2):
			if(d > 29):
				print(d," de fevereiro de", a, "nao eh uma data valida")
			else:
				print(d," de fevereiro de", a, "eh uma data valida")
	elif(a == 1582):
		if((d >= 5 and m == 10) or (d <= 14 and m == 10)):
			print(d," de outubro de ", a, " nao eh uma data valida")
		else:
			print(d," de ", m1," de ", a, "eh uma data valida")
	else:
		print(d," de ", m1," de ", a, "eh uma data valida")
else:
	print(d," de ", m1," de ", a, "nao eh uma data valida")
			
			
			
-- OUTPUT:
agosto
15  de  agosto  de  1990 eh uma data valida
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-01 11:35:44) 
-- CODE:
num = int(input("Digite a data: "))
d = num // 1000000
d1 = num % 1000000
m = d1 // 10000
m1 = d1 % 10000
a = m1
if(m == 1):
	m1 = "janeiro"
elif(m == 2):
	m1 = "fevereiro"
elif(m == 3):
	m1 = "marco"
elif(m == 4):
	m1 = "abril"
elif(m == 5):
	m1 = "maio"
elif(m == 6):
	m1 = "junho"
elif(m == 7):
	m1 = "julho"
elif(m == 8):
	m1 = "agosto"
elif(m == 9):
	m1 = "setembro"
elif(m == 10):
	m1 = "outubro"
elif(m == 11):
	m1 = "novembro"
elif(m == 12):
	m1 = "Dezembro"

if(a > 0 and m >= 1 and m <= 12 and d >= 1):
	if(a % 4 == 0):
		if(m == 2):
			if(d > 29):
				print(d," de fevereiro de", a, "nao eh uma data valida")
			else:
				print(d," de fevereiro de", a, "eh uma data valida")
	elif(a == 1582):
		if((d >= 5 and m == 10) or (d <= 14 and m == 10)):
			print(d," de outubro de ", a, " nao eh uma data valida")
		else:
			print(d," de ", m1," de ", a, "eh uma data valida")
	else:
		print(d," de ", m1," de ", a, "eh uma data valida")
else:
	print(d," de ", m1," de ", a, "nao eh uma data valida")
			
			
			
-- OUTPUT:
15  de  agosto  de  1990 eh uma data valida
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-01 11:36:48) 
-- CODE:
num = int(input("Digite a data: "))
d = num // 1000000
d1 = num % 1000000
m = d1 // 10000
m1 = d1 % 10000
a = m1
if(m == 1):
	m1 = "janeiro"
elif(m == 2):
	m1 = "fevereiro"
elif(m == 3):
	m1 = "marco"
elif(m == 4):
	m1 = "abril"
elif(m == 5):
	m1 = "maio"
elif(m == 6):
	m1 = "junho"
elif(m == 7):
	m1 = "julho"
elif(m == 8):
	m1 = "agosto"
elif(m == 9):
	m1 = "setembro"
elif(m == 10):
	m1 = "outubro"
elif(m == 11):
	m1 = "novembro"
elif(m == 12):
	m1 = "Dezembro"

if(a > 0 and m >= 1 and m <= 12 and d >= 1):
	if(a % 4 == 0):
		if(m == 2):
			if(d > 29):
				print(d," de fevereiro de", a, "nao eh uma data valida")
			else:
				print(d," de fevereiro de", a, "eh uma data valida")
	elif(a == 1582):
		if((d >= 5 and m == 10) or (d <= 14 and m == 10)):
			print(d," de outubro de ", a, " nao eh uma data valida")
		else:
			print(d," de ", m1," de ", a, "eh uma data valida")
	else:
		print(d," de ", m1," de ", a, "eh uma data valida")
else:
	print(d," de ", m1," de ", a, "nao eh uma data valida")
			
			
			
-- OUTPUT:
15  de  agosto  de  1990 eh uma data valida
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-01 11:37:21) 
-- CODE:
num = int(input("Digite a data: "))
d = num // 1000000
d1 = num % 1000000
m = d1 // 10000
m1 = d1 % 10000
a = m1

if(a > 0 and m >= 1 and m <= 12 and d >= 1):
	if(a % 4 == 0):
		if(m == 2):
			if(d > 29):
				print(d," de fevereiro de", a, "nao eh uma data valida")
			else:
				print(d," de fevereiro de", a, "eh uma data valida")
	elif(a == 1582):
		if((d >= 5 and m == 10) or (d <= 14 and m == 10)):
			print(d," de outubro de ", a, " nao eh uma data valida")
		else:
			print(d," de ", m1," de ", a, "eh uma data valida")
	else:
		print(d," de ", m1," de ", a, "eh uma data valida")
else:
	print(d," de ", m1," de ", a, "nao eh uma data valida")
			
			
			
-- OUTPUT:
15  de  1990  de  1990 eh uma data valida
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-01 11:38:27) 
-- CODE:
num = int(input("Digite a data: "))
d = num // 1000000
d1 = num % 1000000
m = d1 // 10000
m1 = d1 % 10000
a = m1

if(a > 0 and m >= 1 and m <= 12 and d >= 1):
	if(a % 4 == 0):
		if(m == 2):
			if(d > 29):
				print(d," de fevereiro de", a, "nao eh uma data valida")
			else:
				print(d," de fevereiro de", a, "eh uma data valida")
	elif(a == 1582):
		if((d >= 5 and m == 10) or (d <= 14 and m == 10)):
			print(d," de outubro de ", a, " nao eh uma data valida")
		else:
			print(d," de ", m," de ", a, "eh uma data valida")
	else:
		print(d," de ", m," de ", a, "eh uma data valida")
else:
	print(d," de ", m," de ", a, "nao eh uma data valida")
			
			
			
-- OUTPUT:
15  de  8  de  1990 eh uma data valida
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-01 11:38:55) 
-- CODE:
num = int(input("Digite a data: "))
d = num // 1000000
d1 = num % 1000000
m = d1 // 10000
m1 = d1 % 10000
a = m1

if(a > 0 and m >= 1 and m <= 12 and d >= 1):
	if(a % 4 == 0):
		if(m == 2):
			if(d > 29):
				print(d," de fevereiro de", a, "nao eh uma data valida")
			else:
				print(d," de fevereiro de", a, "eh uma data valida")
	elif(a == 1582):
		if((d >= 5 and m == 10) or (d <= 14 and m == 10)):
			print(d," de outubro de ", a, " nao eh uma data valida")
		else:
			print(d," de ", m," de ", a, "eh uma data valida")
	else:
		print(d," de ", m," de ", a, "eh uma data valida")
else:
	print(d," de ", m," de ", a, "nao eh uma data valida")
			
			
			
-- OUTPUT:
15  de  8  de  1990 eh uma data valida
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-01 15:35:55) 
-- CODE:
num = int(input("Digite a data: "))
d = num // 1000000
d1 = num % 1000000
m = d1 // 10000
m1 = d1 % 10000
a = m1

if(a > 0 and m >= 1 and m <= 12 and d >= 1):
	if(a % 4 == 0):
		if(m == 2):
			if(d > 29):
				print(d," de fevereiro de", a, "nao eh uma data valida")
			else:
				print(d," de fevereiro de", a, "eh uma data valida")
	elif(a == 1582):
		if((d >= 5 and m == 10) or (d <= 14 and m == 10)):
			print(d," de outubro de ", a, " nao eh uma data valida")
		else:
			print(d," de ", m," de ", a, "eh uma data valida")
	else:
		print(d," de ", m," de ", a, "eh uma data valida")
else:
	print(d," de ", m," de ", a, "nao eh uma data valida")
			
			
			
-- EXECUTION TIME:
0.148922
-- TEST CASE 1:
---- input:
15081990
---- correct output:
15 de 8 de 1990 eh uma data valida
---- user output:
15  de  8  de  1990 eh uma data valida
-- TEST CASE 2:
---- input:
29021999
---- correct output:
29 de 2 de 1999 nao eh uma data valida
---- user output:
29  de  2  de  1999 eh uma data valida
-- TEST CASE 3:
---- input:
10101582
---- correct output:
10 de 10 de 1582 nao eh uma data valida
---- user output:
10  de outubro de  1582  nao eh uma data valida
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
